Fixes spacing for article meta actions on RTL

--- a/private/src/styles/pages/_single.scss
+++ b/private/src/styles/pages/_single.scss
@@ -10,7 +10,13 @@
   margin-bottom: spacing();
 }
 
+.article-footer .article-metaActions .article-share {
+  margin: 0;
+}
+
 .article-footer .article-metaActions {
+  display: flex;
+  justify-content: space-between;
   margin-top: spacing(half);
   margin-bottom: 0;
 }
